Incorporate videos on the test your knowledge tasks

--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities.mdx
@@ -1,10 +1,15 @@
 ---
 title: Activities
 ---
+import { YouTube } from 'astro-embed';
 
 ## Test Your Knowledge
 
 ### Petrol Price Information
+
+<div class="not-content">
+  <YouTube id="GwUgW0EKN5w" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Here we will be creating some useful information based on petrol prices that the user enters.
 
@@ -23,6 +28,10 @@ Validation:
 - Ensure that your petrol price and petrol litres are positive numerical values
 
 ### Sound Player - Changing the Sound
+
+<div class="not-content">
+  <YouTube id="ThhpYKHgBWc" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Here we will be expanding upon what we did in the previous activity, and make it so that we can re-enter sound information instead of having the program only work once.
 
@@ -47,6 +56,10 @@ Validation:
 - Ensure that the sound clip the user attempts to enter is valid
 
 ### Flicking Ball Game
+
+<div class="not-content">
+  <YouTube id="cQQZgORGUPI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Here we will be making a game where we can "flick" a ball across the screen towards a goal.
 
