Add video for build my Pi

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/2-put-together/2-0-pi-computer.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/2-put-together/2-0-pi-computer.mdx
@@ -42,6 +42,8 @@ import Swiper7Slide3 from "./images/Pi-Computer/Swiper7/Slide3.jpg";
 import Swiper8Slide1 from "./images/Pi-Computer/Swiper8/Slide1.jpg";
 import Swiper8Slide2 from "./images/Pi-Computer/Swiper8/Slide2.jpg";
 
+import { YouTube } from 'astro-embed';
+
 export const Swiper1 = [
     {
         src: Swiper1Slide1.src,
@@ -197,6 +199,10 @@ export const Swiper8 = [
         tips: [],
     },
 ];
+
+<div class="not-content">
+  <YouTube id="iQEsXnfwpqA" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Building programs really requires that you have access to a computer that you can play around with. To maximise your experience, we have designed things to work with a [Raspberry Pi](https://www.raspberrypi.com) single board computer.
 
