Update control flow sound player video to fixed version

--- a/src/content/docs/book/part-1-instructions/3-control-flow/4-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/4-activities.mdx
@@ -30,7 +30,7 @@ Validation:
 ### Sound Player - Changing the Sound
 
 <div class="not-content">
-  <YouTube id="ThhpYKHgBWc" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="cLL__hy7iiM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
 Here we will be expanding upon what we did in the [previous activity](../1-sequence-and-data/4-activities#sound-player), adding the ability to play different sounds.
