--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-concepts/04-parameter.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-concepts/04-parameter.mdx
@@ -212,27 +212,26 @@ int main()
 {
     write_line("5 squared is " + to_string(square(5)));
 
-    write_line("A point at 1, 3 is in a circle at 0, 0, with radius 4" + to_string(point_in_circle(1, 3, 0, 0, 4)) );
+    write_line("A point at 1, 3 is in a circle at 0, 0, with radius 4: " + to_string(point_in_circle(1, 3, 0, 0, 4)) );
 
     return 0;
 }
 ```
 
 :::tip
-To get the distance between the point and the center of the circle we are also using the [sqrt](https://en.cppreference.com/w/c/numeric/math/sqrt) function from the math standard library in C.
+To get the distance between the point and the center of the circle we are also using the [sqrt](https://en.cppreference.com/w/c/numeric/math/sqrt) function from the math standard library.
 Don't worry if the maths here doesn't make sense -- it is not the point of the example!
 Focus on how the function parameters are used.
 :::
 
 Notice we can use the `square` function in the calculation in `point_in_circle`. Once you have a function that calculates something, you can call it any time you need that value. 
 
-The great thing about parameters is that it really helps you generalise what your functions and procedures can do. By accepting a value parameter, the `square` function can be used to square any `double` value. Similarly, by accepting parameters for the point and circle, the `point_in_circle` function can work for any point in any circle.
+The great thing about parameters is that they really help you **generalise** what your functions and procedures can do. By accepting a value parameter, the `square` function can be used to square *any* `double` value. Similarly, by accepting parameters for the point and circle, the `point_in_circle` function can work for *any* point in *any* circle.
 
 :::note[Summary]
 
-- Parameter is the **term** given to a [variable](../12-variable) declared to accept the value from an argument passed to a [function or procedure](../00-functions-and-procedures) when it is called.
-- The **procedure call** must provide argument values for each of the procedure’s parameters. These arguments are assigned to the procedures parameters, so that the procedure can use these when it runs.
-- Parameters allow you to pass values into a [function or procedure](../00-functions-and-procedures). 
+- Parameter is the **term** given to a [variable](../../../../part-1-instructions/1-sequence-and-data/1-concepts/07-variable) declared to accept the value from an argument passed to a [function or procedure](../01-0-functions-and-procedures) when it is called.
+- The **procedure or function call** must provide argument values for each of the function or procedure's parameters.
 - Within the function or procedure, the parameters can be used in the same way as any other
 variables.
 - It is **good practice** to use parameters to pass values into a function or procedure.
